--- a/dev/index.html
+++ b/dev/index.html
@@ -31,32 +31,33 @@
   --color-overlay-soft: rgba(19, 20, 22, 0.6);
   /* Font scaling */
   --viewer-font-scale: 1;
+  --viewer_panel_scale: 1;
   /* UI spacing tokens (Tight preset) */
-  --ui-panel-padding-y: 16px;
-  --ui-panel-padding-x: 18px;
+  --ui-panel-padding-y: 14px;
+  --ui-panel-padding-x: 16px;
   --ui-panel-padding-bottom: 72px;
-  --ui-panel-gap: 8px;
-  --ui-overlay-gap: 6px;
-  --ui-overlay-padding: 10px;
-  --ui-overlay-card-padding-y: 10px;
-  --ui-overlay-card-padding-x: 12px;
-  --ui-info-grid-gap: 3px 10px;
-  --ui-help-grid-gap: 3px 8px;
-  --ui-section-header-padding-y: 8px;
+  --ui-panel-gap: 6px;
+  --ui-overlay-gap: 5px;
+  --ui-overlay-padding: 8px;
+  --ui-overlay-card-padding-y: 8px;
+  --ui-overlay-card-padding-x: 10px;
+  --ui-info-grid-gap: 2px 8px;
+  --ui-help-grid-gap: 2px 6px;
+  --ui-section-header-padding-y: 6px;
   --ui-section-header-padding-x: 10px;
   --ui-section-header-gap: 10px;
-  --ui-section-body-gap: 8px;
-  --ui-section-body-padding: 10px;
-  --ui-control-row-gap: 4px 8px;
-  --ui-control-row-full-gap: 6px;
-  --ui-control-field-gap: 4px;
-  --ui-action-row-gap: 6px;
-  --ui-compact-pills-gap: 4px;
-  --ui-segmented-gap: 3px;
-  --ui-segmented-padding: 3px;
-  --ui-pill-row-gap: 6px;
+  --ui-section-body-gap: 6px;
+  --ui-section-body-padding: 8px;
+  --ui-control-row-gap: 3px 6px;
+  --ui-control-row-full-gap: 5px;
+  --ui-control-field-gap: 3px;
+  --ui-action-row-gap: 5px;
+  --ui-compact-pills-gap: 3px;
+  --ui-segmented-gap: 2px;
+  --ui-segmented-padding: 2px;
+  --ui-pill-row-gap: 5px;
   --ui-equality-container-margin-top: 8px;
-  --ui-equality-container-gap: 10px;
+  --ui-equality-container-gap: 8px;
   --ui-run-toggle-margin-top: 4px;
   --ui-toast-offset-x: 24px;
   --ui-toast-offset-y: 24px;
@@ -82,7 +83,7 @@ body {
   font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
   overflow: hidden;
   display: grid;
-  grid-template-columns: 320px minmax(0, 1fr) 360px;
+  grid-template-columns: calc(320px * var(--viewer_panel_scale)) minmax(0, 1fr) calc(320px * var(--viewer_panel_scale));
   grid-template-rows: minmax(0, 1fr);
   height: 100vh;
   max-height: 100vh;
@@ -766,17 +767,17 @@ body.fullscreen {
 }
 body.layout-3col {
   grid-template-areas: "left main right";
-  grid-template-columns: 320px minmax(0, 1fr) 360px;
+  grid-template-columns: calc(320px * var(--viewer_panel_scale)) minmax(0, 1fr) calc(320px * var(--viewer_panel_scale));
   grid-template-rows: minmax(0, 1fr);
 }
 body.layout-left {
   grid-template-areas: "left main";
-  grid-template-columns: 320px minmax(0, 1fr) 0;
+  grid-template-columns: calc(320px * var(--viewer_panel_scale)) minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr);
 }
 body.layout-right {
   grid-template-areas: "main right";
-  grid-template-columns: 0 minmax(0, 1fr) 360px;
+  grid-template-columns: minmax(0, 1fr) calc(320px * var(--viewer_panel_scale));
   grid-template-rows: minmax(0, 1fr);
 }
 body.layout-main {
