chore: update dev viewer wiring

--- a/dev/index.html
+++ b/dev/index.html
@@ -253,7 +253,7 @@ body.fullscreen {
   position: absolute;
   top: 12px;
   right: 12px;
-  min-width: auto;
+  min-width: 90px;
 }
 .overlay-card[data-testid="overlay-info"] {
   position: absolute;
@@ -823,7 +823,7 @@ body.layout-main {
    </canvas>
    <div class="overlay-stack">
      <div class="overlay-card" data-testid="overlay-realtime">
-      <div data-testid="overlay-realtime-desired">Speed: 100%</div>
+      <div data-testid="overlay-realtime-desired">Speed : 100%</div>
       <div data-testid="overlay-realtime-actual">Physics: 100%</div>
      </div>
      <div class="overlay-card" data-testid="overlay-help">
