Sync play with latest forge ABI and restore physics/visual writeback

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,12 @@
   </title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <script type="importmap">
-   {  "imports": {    "three": "https://unpkg.com/three@0.161.0/build/three.module.js",    "three/addons/": "https://unpkg.com/three@0.161.0/examples/jsm/"  }}
+   {
+    "imports": {
+      "three": "https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.module.js",
+      "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/"
+    }
+   }
   </script>
   <style>
 :root {
